Atualização em andamento

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Workout</title>
 </head>
 <body>
     <div class="page">
@@ -52,6 +52,12 @@
         <article id="homem">
         <img src="./arquivos/homem.png" alt="foto de homem malhando"/>
     </article>
+
+    <div id="blocorun">
+        <img src="./arquivos/running.png" alt="running">
+        <h3>4,95</h3>
+        <p>km</p>
+    </div>
 
      </main>
 
