--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <section class="text">
             
         <h1>Workout<br>with<gap> </gap>me</h1>
+        <div class="texto1">
         <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
-
+    </div>
         <button>
             Join Club Now!
           </button>
@@ -138,9 +139,11 @@
                  <a href="#">See More
                     <img src="./arquivos/seta.png"></a>
             </section>
+            <div class="relaxa">
             <article>
                 <img src="./arquivos/relaxing.png">
             </article>
+        </div>
         </div>
 
         <div class="conteudo3">
